Add files for task 0-starwars_characters.js

--- a/0x06-starwars_api/package.json
+++ b/0x06-starwars_api/package.json
@@ -1,5 +1,12 @@
 {
+  "type": "module",	
   "dependencies": {
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "semistandard": "*"
+  },
+  "scripts": {
+    "test": "semistandard"
   }
 }
